--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                    data-words="Full Stack Developer,.Net Developer,Mentoring"></span>
                 </span>
                 <div>
                     <div class="social-icons">
