--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <br/>
                 <span style="display: inline;">I am into <span class="animated-text"
-                    data-words="Full Stack Developer, .Net Development, Mentoring"></span>
+                    data-words="Full Stack Developer, .Net Developer, Mentor"></span>
                 </span>
                 <div>
                     <div class="social-icons">
